crates/php-parser/tests/snapshots/corpus__expr_listwithkeys.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "a"
                        },
                        "span": {
                          "start": 12,
                          "end": 15
                        }
                      },
                      "value": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 19,
                          "end": 21
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 12,
                        "end": 21
                      }
                    }
                  ]
                },
                "span": {
                  "start": 7,
                  "end": 22
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "a"
                        },
                        "span": {
                          "start": 26,
                          "end": 29
                        }
                      },
                      "value": {
                        "kind": {
                          "String": "b"
                        },
                        "span": {
                          "start": 33,
                          "end": 36
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 26,
                        "end": 36
                      }
                    }
                  ]
                },
                "span": {
                  "start": 25,
                  "end": 37
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 37
          }
        }
      },
      "span": {
        "start": 7,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "a"
                        },
                        "span": {
                          "start": 44,
                          "end": 47
                        }
                      },
                      "value": {
                        "kind": {
                          "Array": [
                            {
                              "key": {
                                "kind": {
                                  "Variable": "b"
                                },
                                "span": {
                                  "start": 56,
                                  "end": 58
                                }
                              },
                              "value": {
                                "kind": {
                                  "Variable": "c"
                                },
                                "span": {
                                  "start": 62,
                                  "end": 64
                                }
                              },
                              "unpack": false,
                              "span": {
                                "start": 56,
                                "end": 64
                              }
                            }
                          ]
                        },
                        "span": {
                          "start": 51,
                          "end": 65
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 44,
                        "end": 65
                      }
                    },
                    {
                      "key": {
                        "kind": {
                          "String": "d"
                        },
                        "span": {
                          "start": 67,
                          "end": 70
                        }
                      },
                      "value": {
                        "kind": {
                          "Variable": "e"
                        },
                        "span": {
                          "start": 74,
                          "end": 76
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 67,
                        "end": 76
                      }
                    }
                  ]
                },
                "span": {
                  "start": 39,
                  "end": 77
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 80,
                  "end": 82
                }
              }
            }
          },
          "span": {
            "start": 39,
            "end": 82
          }
        }
      },
      "span": {
        "start": 39,
        "end": 83
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 83
  }
}
